2010-09-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/clfswm: Move clfswm sources to $tmp_dir if there is no
	write permission on $clfswm_asd_path. So anybody can start clfswm
	even if there is no write permission on the source directory.

2010-09-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/clfswm: Add support to cmucl, ccl and ecl.

2010-09-11  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (set-hide-unmanaged-window)
	(set-show-unmanaged-window, set-default-hide-unmanaged-window):
	New functions and menu entry.
	(set-globally-hide-unmanaged-window)
	(set-globally-show-unmanaged-window): New functions and menu
	entry.

	* src/clfswm-internal.lisp (hide-unmanager-window-p): New
	function.
	(show-child): Add a data slot on frame to hide or not unmanaged
	windows.

	* src/clfswm-corner.lisp (present-clfswm-terminal)
	(present-virtual-keyboard): Use a function (generic-present-body)
	instead of a macro (generate-present-body).

	* src/clfswm-util.lisp (update-menus): List all directories and
	subdirectories in $XDG_DATA_DIRS/applications.

2010-09-10  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-corner.lisp (generate-present-body): New macro.
	(present-clfswm-terminal, present-virtual-keyboard): Use
	generate-present-body.

2010-09-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (update-menus): Follow XDG specifications
	instead of the non-portable Debian update-menu.

2010-09-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (error-handler): New function do handle
	asynchronous errors and ignore them.
	(open-display): Install the new error-handler on display.

2010-09-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (with-xlib-protect): Add a
	with-simple-restart on top of body execution.

2010-09-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-loop): Protect all xlib functions with an